[gd_scene load_steps=2 format=3 uid="uid://bnd5j4rptjo0g"]

[ext_resource type="Script" path="res://scripts/stats_display.gd" id="1_lukkg"]

[node name="StatsDisplay" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_lukkg")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HealthLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "HP: 100"

[node name="BlockLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Block: 0"

[node name="EnergyLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Energy: 3"
